compiler/tests/should-fail/UnknownMethod.via
/* UnknownMethodError */

process main {
    val x: int = 42;
    x = 43;
}
